--- a/assets/app.scss
+++ b/assets/app.scss
@@ -3,3 +3,11 @@
 @import "assets/styles/_login.scss";
 @import "assets/styles/_home.scss";
 @import "assets/styles/_header.scss";
+@import "assets/styles/_show.scss";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: 1.4em;
+}
