--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,3 +1,8 @@
 .offcanvas {
-    background-color: #5C84B7!important;
+    background-color: #495867!important;
+}
+
+.navbar {
+    padding: 0!important;
+    margin: 0!important;
 }
