--- a/assets/styles/_show.scss
+++ b/assets/styles/_show.scss
@@ -1,8 +1,27 @@
-img {
-    width: 800px;
-    height: auto;
+article {
+    margin-top: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+    height: 100vh;
 }
 
-.card-header {
-    background-color: 0059C6;
+article h1 {
+    margin: 3rem
+}
+
+article img {
+    margin-left: 0;
+    width: 450px;
+    height: auto;
+    margin: 10px!important;
+    padding: 0;
+    border-radius: 15px;
+}
+
+article p {
+    margin-top: 3rem!important;
+    text-align: left;
+    color: white;
+    font-weight: bold;
 }
