--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -79,7 +79,7 @@
                     {% else %}
                         <div class="col-6 box-image" id="boxOne" style="background-image: url('upload/images/{{ asset(posts.mediaUrl) }}')"><!-- Début de la boîte boxOne -->
                     {% endif %}
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">  <!-- Liens vers l'URL du post -->
+                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="d-inline-block w-100 h-100">  <!-- Liens vers l'URL du post -->
                             <!-- Contenu pour les posts avec un ID pair -->
                                 <div class="row">
                                 
@@ -107,7 +107,7 @@
                     {% endif %}
 
                             <!-- Contenu pour les posts avec un ID impair -->
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">  <!-- Liens vers l'URL du post -->
+                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="d-inline-block w-100 h-100">  <!-- Liens vers l'URL du post -->
                                 <div class="row">
 
                                     {# <div class="col-6">
