--- a/assets/app.scss
+++ b/assets/app.scss
@@ -4,6 +4,7 @@
 @import "assets/styles/_home.scss";
 @import "assets/styles/_header.scss";
 @import "assets/styles/_show.scss";
+@import "assets/styles/_about.scss";
 
 * {
     margin: 0;
