--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -1,33 +1,42 @@
 {% extends 'base.html.twig' %}
 
+
 {% block body %}
 
+{% set counter = 0 %}
 
-<h1 class="text-center"> A Propos </h1>
-
-<div class="pt-4">
-    <section class="container">
+{% for posts in post %}
+    {% if counter is divisible by(2) %}
+    <article>
         <div class="row">
-            {% for posts in post %}
-                <div class="col-md-4">
-
-                        <article class="card mb-4" id="art1">
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
-
-                            <div class="card-body d-flex justify-content-center align-content-center">
-                            {% if posts.mediaUrl is not null %}
-                                <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                            {% endif %}
-                            </div>
-                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
-
-                            </a>
-                        </article>
-
-                </div>
-            {% endfor %}  
+            <div class="col-5 d-flex">
+                {% if posts.mediaUrl is not null %}
+                    <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+            </div>
+            <div class="col-7">
+                <h1>{{ posts.title }}</h1>
+                <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+            </div>
         </div>
-    </section>
-</div>
+    </article>
+    {% else %}
+    <article>
+        <div class="row">
+            <div class="col-7">
+                <h1>{{ posts.title }}</h1>
+                <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+            </div>
+            <div class="col-5 d-flex">
+                {% if posts.mediaUrl is not null %}
+                    <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+            </div>
+        </div>
+    </article>
+    {% endif %}
+    
+    {% set counter = counter + 1 %}
+{% endfor %}
 
-{% endblock %} 
+{% endblock %}
