--- a/templates/main/support.html.twig
+++ b/templates/main/support.html.twig
@@ -1,32 +1,53 @@
 {% extends 'base.html.twig' %}
 
+
 {% block body %}
 
-<h1 class="text-center"> Prise en charge </h1>
+{% set counter = 0 %}
 
-<div class="pt-4">
-    <section class="container">
-        <div class="row">
-            {% for posts in post %}
-                <div class="col-md-4">
+{% for posts in post %}
 
-                        <article class="card mb-4" id="art1">
-                            <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+    {% if counter is divisible by(2) %}
 
-                            <div class="card-body d-flex justify-content-center align-content-center">
-                            {% if posts.mediaUrl is not null %}
-                                <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                            {% endif %}
-                            </div>
-                            <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
+        <section class="support_boxone">
+            <div class="row">
 
-                            </a>
-                        </article>
-
+                <div class="col-5 d-flex">
+                    {% if posts.mediaUrl is not null %}
+                        <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    {% endif %}
                 </div>
-            {% endfor %}  
-        </div>
-    </section>
-</div>
 
-{% endblock %} 
+                <div class="col-7">
+                    <h1>{{ posts.title }}</h1>
+                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                </div>
+
+            </div>
+        </section>
+
+        {% else %}
+
+        <section class="support_boxone">
+            <div class="row">
+
+                <div class="col-7">
+                    <h1>{{ posts.title }}</h1>
+                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                </div>
+
+                <div class="col-5 d-flex">
+                    {% if posts.mediaUrl is not null %}
+                        <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    {% endif %}
+                </div>
+
+            </div>
+        </section>
+        
+    {% endif %}
+    
+    {% set counter = counter + 1 %}
+{% endfor %}
+
+{% endblock %}
