--- a/assets/styles/_theme.scss
+++ b/assets/styles/_theme.scss
@@ -1,8 +1,12 @@
-body {
-    background-color: #495867!important;
-}
+// $text: #ffffff;
+// $nav: ;
+// $menu ;
+// $menuButton: ;
+// $firstBackground: ;
+// $secondBackground: ;
 
 #logo {
     width: 150px;
     height: auto;
 }
+
