--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -3,22 +3,11 @@
 
 {% block body %}
 
-<section class="text-center" id="compteur">
-
-    <span><span class="count">421 </span> interventions / jours </span>
-    <span><span class="count">45</span> urgences / jours </span>
-    <span><span class="count">28</span> salariés </span>
-    <span><span class="count">5</span> ambualnces </span>
-    <span><span class="count">10</span> VSL </span>
-    <span><span class="count">8</span> Taxi </span>
-
-</section>
-
-<section class="container w-100" id="firstScreen">
+<section class="container" id="home">
     <div class="row">
         <div class="col-6">
             <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-            <p class="lead">L’entreprise « La Clunysoise » est une société d’ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d’interventions d’urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d’appel 15.</p>
+            <p class="lead">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
         </div>
         
         <div class="col-6">
