--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,20 +1,27 @@
 {% block header %}
 
 
-<nav class="navbar navbar-Light bg-light" aria-label="Light offcanvas navbar">
+<nav class="navbar" aria-label="Light offcanvas navbar">
   <div class="container-fluid g-0">
     <a class="navbar-brand m-0 p-0" href="/"><img id="logo" src="{{ asset('logo2.svg') }}"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-
+    <section class="text-center" id="compteur">
+      <span><span class="count">421</span> interventions / jours </span>
+      <span><span class="count">45</span> urgences / jours </span>
+      <span><span class="count">28</span> salariés </span>
+      <span><span class="count">5</span> ambualnces </span>
+      <span><span class="count">10</span> VSL </span>
+      <span><span class="count">8</span> Taxi </span>
+  </section>
+    <div class="square rounded" id="menuButton">
+      <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
+      <span class="text-white">Menu</span>
+      <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    
     <div class="offcanvas offcanvas-end text-bg-Light" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
-
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">La Clunysoise</h5>
-      </div>
-
-      <div class="offcanvas-body">
+      <div class="offcanvas-body pt-5">
+        <img src="{{ asset('ClunyText.png')}}">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
             <a class="nav-link" href="/">Accueil</a>
