Small Front Update

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -6,9 +6,12 @@
 @import "assets/styles/_show.scss";
 @import "assets/styles/_about.scss";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     line-height: 2.0em;
+    font-family: 'Poppins', sans-serif;
 }
