--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,5 +1,5 @@
 .offcanvas {
-    background-color: #ffffff!important;
+    background-color: #0059C6!important;
 }
 
 nav {
@@ -35,11 +35,16 @@ nav {
     transform: translate(-50%, -50%)!important;
 }
 
+#menuLogo {
+    width: 300px; 
+    height: auto;
+}
+
 .navbar-toggler-icon {
     width: 2rem!important;
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .offcanvas.offcanvas-end {
-    width: 50vw!important;
+    width: 35vw!important;
 }
