--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,6 +1,5 @@
 {% block header %}
 
-
 <nav class="navbar" aria-label="Light offcanvas navbar">
   <div class="container-fluid g-0">
     <a class="navbar-brand m-0 p-0" href="/"><img id="logo" src="{{ asset('logo2.svg') }}"></a>
@@ -11,49 +10,47 @@
       <span><span class="count">5</span> ambualnces </span>
       <span><span class="count">10</span> VSL </span>
       <span><span class="count">8</span> Taxi </span>
-  </section>
+    </section>
     <div class="square rounded" id="menuButton">
       <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
-      <span class="text-white">Menu</span>
-      <span class="navbar-toggler-icon"></span>
+        <span class="text-white">Menu</span>
+        <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    
+
     <div class="offcanvas offcanvas-end text-bg-Light" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
       <div class="offcanvas-body pt-5">
-        <img src="{{ asset('ClunyText.png')}}">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+        <img src="{{ asset('ClunyTextWhite.png') }}" id="menuLogo">
+        <hr class="border border-white opacity-100 border-1 m-5">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 pt-5 ps-3">
           <li class="nav-item">
-            <a class="nav-link" href="/">Accueil</a>
+            <a class="nav-link text-white fs-5" href="/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/a-propos">A Propos</a>
+            <a class="nav-link text-white fs-5" href="/a-propos">A Propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/prise-en-charge">Prise en charge</a>
+            <a class="nav-link text-white fs-5" href="/prise-en-charge">Prise en charge</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/nous-rejoindre">Nous rejoindre</a>
+            <a class="nav-link text-white fs-5" href="/nous-rejoindre">Nous rejoindre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/vos-rendez-vous">Vos rendez-vous</a>
+            <a class="nav-link text-white fs-5" href="/vos-rendez-vous">Vos rendez-vous</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact">Contacts</a>
+          <li class="nav-item pb-5">
+            <a class="nav-link text-white fs-5" href="/contact">Contacts</a>
           </li>
-
+          <hr class="border border-white opacity-100 border-1 m-5">
           {% if is_granted('ROLE_ADMIN') %}
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin">Gestion admin</a></li>
           {% endif %}
 
-
         </ul>
       </div>
-      
     </div>
 
   </div>
 </nav>
-
 
 {% endblock %}
