--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -5,9 +5,9 @@
 
 <section class="container" id="home">
     <div class="row">
-        <div class="col-6">
+        <div class="col-6" id"home_description" style="background-image: url('{{ asset("test.jpg") }}')">
             <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-            <p class="lead">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+            <p class="lead text-center">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
         </div>
         
         <div class="col-6">
@@ -19,7 +19,7 @@
                         <a href="/a-propos">
 
                         <div style="display: flex; justify-content: center; align-items: center;">
-                            <img src="{{ asset('Logo_C.png') }}" class="d-block w-100 center-block" alt="...">
+                            <img src="{{ asset('car1.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
                         <div class="carousel-caption d-none d-md-block text-dark">
@@ -35,7 +35,7 @@
                         <a href="/a-propos">
 
                         <div style="display: flex; justify-content: center; align-items: center;">
-                            <img src="{{ asset('Logo_C.png') }}" class="d-block w-100 center-block" alt="...">
+                            <img src="{{ asset('car2.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
                         <div class="carousel-caption d-none d-md-block text-dark">
@@ -51,7 +51,7 @@
                         <a href="/a-propos">
                         
                         <div style="display: flex; justify-content: center; align-items: center;">
-                            <img src="{{ asset('Logo_C.png') }}" class="d-block w-100 center-block" alt="...">
+                            <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
                         <div class="carousel-caption d-none d-md-block text-dark">
