--- a/assets/app.scss
+++ b/assets/app.scss
@@ -5,6 +5,7 @@
 @import "assets/styles/_header.scss";
 @import "assets/styles/_show.scss";
 @import "assets/styles/_about.scss";
+@import "assets/styles/_support.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
