--- a/assets/styles/_about.scss
+++ b/assets/styles/_about.scss
@@ -3,6 +3,7 @@
     margin-left: 1rem!important;
     margin-right: 1rem!important;
     max-height: 100vh!important;
+    overflow: hidden;
 }
 
 .about_boxone img {
