--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -6,8 +6,8 @@
 <section class="container" id="home">
     <div class="row">
         <div class="col-6" id"home_description" style="background-image: url('{{ asset("test.jpg") }}')">
-            <h1 class="display-4 fst-italic text-center">La Clunysoise</h1>
-            <p class="lead text-center">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+            <h1 class="display-4 fst-italic text-center text-white">La Clunysoise</h1>
+            <p class="lead text-center text-white">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
         </div>
         
         <div class="col-6">
@@ -18,11 +18,11 @@
                     <div class="carousel-item active">
                         <a href="/a-propos">
 
-                        <div style="display: flex; justify-content: center; align-items: center;">
+                        <div class="d-flex justify-content-center align-items-center">
                             <img src="{{ asset('car1.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
-                        <div class="carousel-caption d-none d-md-block text-dark">
+                        <div class="carousel-caption d-none d-md-block">
                             <h2>Ambulance</h2>
                             <p>Nos ambulances</p>
                         </div>
@@ -34,11 +34,11 @@
                     <div class="carousel-item">
                         <a href="/a-propos">
 
-                        <div style="display: flex; justify-content: center; align-items: center;">
+                        <div class="d-flex justify-content-center align-items-center">
                             <img src="{{ asset('car2.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
-                        <div class="carousel-caption d-none d-md-block text-dark">
+                        <div class="carousel-caption d-none d-md-block">
                             <h2> VSL </h2>
                             <p>Nos vehicules sanitaires légés</p>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="carousel-item">
                         <a href="/a-propos">
                         
-                        <div style="display: flex; justify-content: center; align-items: center;">
+                        <div class="d-flex justify-content-center align-items-center">
                             <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
