--- a/templates/main/support.html.twig
+++ b/templates/main/support.html.twig
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="col-7">
-                    <h1>{{ posts.title }}</h1>
+                    <h1 class="text-center">{{ posts.title }}</h1>
                     <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
 
@@ -32,7 +32,7 @@
             <div class="row">
 
                 <div class="col-7">
-                    <h1>{{ posts.title }}</h1>
+                    <h1 class="text-center">{{ posts.title }}</h1>
                     <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
 
