--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -12,8 +12,14 @@
     max-width: 100vw;
 }
 
+#home p, 
+#home h1 {
+    margin-top: 150px!important;
+}
+
 .carousel-inner img {
-    max-height: 100vh!important;
+    width: 50vw!important;
+    height: 700px!important;
 }
 
 #boxOne {
