--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -54,7 +54,7 @@
                             <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="...">
                         </div>
 
-                        <div class="carousel-caption d-none d-md-block text-dark">
+                        <div class="carousel-caption d-none d-md-block">
                             <h2> Taxi </h2>
                             <p>Nos taxi</p>
                         </div>
@@ -80,7 +80,13 @@
     </div>
 </section>
 
+<section class="d-flex justify-content-center" id="buttons" style="background-image:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 30%, rgba(0,212,255,1) 100%);')">
+    
+    <button type="button" class="btn btn-outline-primary"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
+    <button type="button" class="btn btn-outline-info"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
+    <button type="button" class="btn btn-outline-light"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
 
+</section>
 
 <section id="gridGallery">
     <div class="container d-flex">
@@ -129,6 +135,13 @@
     </div>  <!-- Fermeture de la div.container -->
 </section>  <!-- Fermeture de la section -->
 
+<section class="d-flex justify-content-center" id="buttons" style="background-image:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 30%, rgba(0,212,255,1) 100%);')">
+    
+    <button type="button" class="btn btn-outline-primary"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
+    <button type="button" class="btn btn-outline-info"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
+    <button type="button" class="btn btn-outline-light"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
+
+</section>
 
 
 {% endblock %} 
