--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -5,5 +5,48 @@
 
 <h1 class="text-center"> Contact </h1>
 
+<div class="container">
+    <section class="row border-top">
+        <div class="col-6">
+
+            <p class="text-body-secondary"><a href="tel:+33385590487" class="nav-link p-0 text-body-secondary">Tèl : 03 85 59 04 87</a></p>
+            <p class="text-body-secondary"><a href="tel:+33677658774" class="nav-link p-0 text-body-secondary">Tèl : 06 77 65 87 74</a></p>
+            <p class="text-body-secondary"><a href="mailto:la.clunysoise@orange.fr" class="nav-link p-0 text-body-secondary">E-mail : la.clunysoise@orange.fr</a></p>
+            <p class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689512574759!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div class="col-6">
+
+        <section id="contact">
+        <form class="border-top">
+
+            <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Nom</span>
+            <input type="text" class="form-control" placeholder="Dupont" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Prénom</span>
+            <input type="text" class="form-control" placeholder="Robert" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="@example.com" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <span class="input-group-text" id="basic-addon2">mail</span>
+            </div>
+
+            <div class="input-group mb-3">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="votre message"></textarea>
+            </div>
+
+        </form>
+        </section>
+
+
+        </div>
+    </section>
+</div>
 
 {% endblock %} 
