--- a/templates/main/join.html.twig
+++ b/templates/main/join.html.twig
@@ -9,7 +9,7 @@
 
     {% if counter is divisible by(2) %}
 
-        <section class="support_boxone">
+        <section class="join_boxone border-top">
             <div class="row">
 
                 <div class="col-5 d-flex">
@@ -28,7 +28,7 @@
 
         {% else %}
 
-        <section class="support_boxone">
+        <section class="join_boxone border-top">
             <div class="row">
 
                 <div class="col-7">
@@ -49,5 +49,30 @@
     
     {% set counter = counter + 1 %}
 {% endfor %}
+
+        <section class="join_form">
+        <form class="border-top">
+
+            <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Nom</span>
+            <input type="text" class="form-control" placeholder="Dupont" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Prénom</span>
+            <input type="text" class="form-control" placeholder="Robert" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="@example.com" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <span class="input-group-text" id="basic-addon2">mail</span>
+            </div>
+
+            <div class="input-group mb-3">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="votre message"></textarea>
+            </div>
+
+        </form>
+        </section>
 
 {% endblock %}
